--- a/_posts/2022-01-05-post-test.md
+++ b/_posts/2022-01-05-post-test.md
@@ -5,9 +5,9 @@ title: markdown
 
 سه تا از بهترین و بدترین اتفاقات این ترم:
 دوران یادگیری زبان سی خیلی برام سخت گذشت
-امتحان عملی 1
-امتحان عملی 2
-از بهترین اتفاقات یکی درست کردن سایت / یادگیری زبان پایتون/ درست کردن بازی
+امتحان عملی 1 چون اولین امتحان عملی بود خیلی شناخت بهش نداشتم و استرسم به شدت زیاد بود برای همین نمیتونستم خوب تمرکز کنم
+امتحان عملی 2 هم چون خیلی زبان سی برام جا نفتاده بود سوالاتش به نظرم سخت میومد
+از بهترین اتفاقات یکی درست کردن سایت / یادگیری زبان پایتون/ درست کردن بازی تجربه ی قشنگی بودن
 
 
 
